syntax = "proto3";  // Version de la sintaxis (puede ser proto2 o proto3)

option csharp_namespace = "ServerAdmin"; //Esta opcion esta ligada al lenguaje que estamos usando

package greet; // Definimos el package de nuestro servicio

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GiveMeANumber (NumberRequest) returns (NumberReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1; //Todos los componentes de un message van indexados
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message NumberRequest {
  string name = 1; 
}

// The response message containing the greetings.
message NumberReply {
  int32 number = 1;
}

